deduplication-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deduplication-service
  labels:
    name: deduplication-service
    app: deduplication
